load initial clock, countdown if running

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,20 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CHANGE ME & DESCRIPTION</title>
-    <meta name="description" content="CHANGE ME" />
+    <title>COUNTDOWN</title>
+    <meta
+      name="description"
+      content="A simple, frightening countdown for ttrpg groups."
+    />
     <link rel="icon" href="./static/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <div id="content"></div>
+    <div id="content">
+      <div id="clock-wrapper">
+        <h1 id="clock"></h1>
+      </div>
+    </div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
