pausing and playing clock keeps consistent time

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,13 @@
   </head>
   <body>
     <div id="content">
-      <div id="clock-wrapper">
-        <h1 id="clock"></h1>
+      <div id="inner">
+        <div id="clock-wrapper">
+          <h1 id="clock"></h1>
+        </div>
+        <div id="controls">
+          <button id="start-stop-button"></button>
+        </div>
       </div>
     </div>
     <script type="module" src="./main.ts"></script>
